fixed a small issue with the header overflowing

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -65,6 +65,10 @@ h1, h2, h3, h4 {
   }
 }
 
+#header{
+  width:auto;
+}
+
 // BASIC IMAGE DEFINTIONS
 .background-image{
   height:100%;
